--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular-devkit/build-angular": "^12.2.2",
     "@angular/cli": "^12.2.2",
     "@angular/language-service": "~12.2.2",
+    "@angular/compiler-cli": "^12.2.2",
     "@types/jasmine": "^2.8.18",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "~8.9.4",
@@ -56,7 +57,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "~4.3.5"
   },
   "engines": {
     "node": "14.17.1",
